# dashboard

./: README.md
dashboard/: Makefile  main.py  pyproject.toml
dashboard/modules/: fake_data.py
