[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit-elements==0.1.*",
    "streamlit>=1.44.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "mplfinance>=0.12.10b0",
    "streamlit-lightweight-charts>=0.7.20",
]
